Raycast interaction with objects added

--- a/LatenzProjekt/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/LatenzProjekt/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -482,6 +482,53 @@ CapsuleComponent.Tags=True
 CapsuleComponent.ComponentReplication=True
 CapsuleComponent.Cooking=True
 CapsuleComponent.Events=True
+WidgetInteractionComponent.Variable=True
+WidgetInteractionComponent.TransformCommon=True
+WidgetInteractionComponent.Sockets=True
+WidgetInteractionComponent.Interaction=True
+WidgetInteractionComponent.Debugging=True
+WidgetInteractionComponent.ComponentTick=True
+WidgetInteractionComponent.Rendering=True
+WidgetInteractionComponent.Tags=True
+WidgetInteractionComponent.ComponentReplication=True
+WidgetInteractionComponent.Activation=True
+WidgetInteractionComponent.Cooking=True
+WidgetInteractionComponent.Events=True
+MotionControllerComponent.Variable=True
+MotionControllerComponent.TransformCommon=True
+MotionControllerComponent.Sockets=True
+MotionControllerComponent.ComponentTick=True
+MotionControllerComponent.HLOD=True
+MotionControllerComponent.Rendering=True
+MotionControllerComponent.Physics=True
+MotionControllerComponent.PathTracing=True
+MotionControllerComponent.Collision=True
+MotionControllerComponent.Lighting=True
+MotionControllerComponent.Visualization=True
+MotionControllerComponent.MotionController=True
+MotionControllerComponent.Navigation=True
+MotionControllerComponent.Tags=True
+MotionControllerComponent.ComponentReplication=True
+MotionControllerComponent.Activation=True
+MotionControllerComponent.Cooking=True
+MotionControllerComponent.Events=True
+GrabComponent_C.TransformCommon=True
+GrabComponent_C.Default=True
+GrabComponent_C.Rendering=True
+GrabComponent_C.Tags=True
+GrabComponent_C.Activation=True
+GrabComponent_C.Cooking=True
+GrabComponent_C.ComponentReplication=True
+GrabComponent_C.Variable=True
+PhysicsHandleComponent.PhysicsHandle=True
+PhysicsHandleComponent.Tags=True
+PhysicsHandleComponent.ComponentReplication=True
+PhysicsHandleComponent.Activation=True
+PhysicsHandleComponent.Variable=True
+PhysicsHandleComponent.Cooking=True
+PhysicsHandleComponent.Sockets=True
+PhysicsHandleComponent.ComponentTick=True
+PhysicsHandleComponent.Events=True
 
 [AssetEditorSubsystem]
 CleanShutdown=False
@@ -1696,8 +1743,8 @@ LastDirectory=
 RecentsFiles=C:/Program Files/Epic Games/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 
 [DetailCustomWidgetExpansion]
-InputMappingContext=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/VRTemplate/Input/Actions/NewActions/IA_MoveAround.IA_MoveAround,InputMappingContext.Mappings.ActionMappings./Game/VRTemplate/Input/Actions/NewActions/IA_MoveX.IA_MoveX,InputMappingContext.Mappings.ActionMappings./Game/VRTemplate/Input/Actions/NewActions/IA_MoveForward.IA_MoveForward,InputMappingContext.Mappings.ActionMappings./Game/VRTemplate/Input/Actions/NewActions/IA_TurnAround.IA_TurnAround
-InputAction=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/VRTemplate/Input/Actions/NewActions/IA_MoveAround.IA_MoveAround,InputMappingContext.Mappings.ActionMappings./Game/VRTemplate/Input/Actions/NewActions/IA_MoveX.IA_MoveX,InputMappingContext.Mappings.ActionMappings./Game/VRTemplate/Input/Actions/NewActions/IA_MoveForward.IA_MoveForward,InputMappingContext.Mappings.ActionMappings./Game/VRTemplate/Input/Actions/NewActions/IA_TurnAround.IA_TurnAround
+InputMappingContext=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/VRTemplate/Input/Actions/NewActions/IA_MoveAround.IA_MoveAround,InputMappingContext.Mappings.ActionMappings./Game/VRTemplate/Input/Actions/NewActions/IA_MoveX.IA_MoveX,InputMappingContext.Mappings.ActionMappings./Game/VRTemplate/Input/Actions/NewActions/IA_MoveForward.IA_MoveForward,InputMappingContext.Mappings.ActionMappings./Game/VRTemplate/Input/Actions/NewActions/IA_TurnAround.IA_TurnAround,InputMappingContext.Mappings.ActionMappings./Game/VRTemplate/Input/Actions/NewActions/IA_Turn.IA_Turn
+InputAction=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/VRTemplate/Input/Actions/NewActions/IA_MoveAround.IA_MoveAround,InputMappingContext.Mappings.ActionMappings./Game/VRTemplate/Input/Actions/NewActions/IA_MoveX.IA_MoveX,InputMappingContext.Mappings.ActionMappings./Game/VRTemplate/Input/Actions/NewActions/IA_MoveForward.IA_MoveForward,InputMappingContext.Mappings.ActionMappings./Game/VRTemplate/Input/Actions/NewActions/IA_TurnAround.IA_TurnAround,InputMappingContext.Mappings.ActionMappings./Game/VRTemplate/Input/Actions/NewActions/IA_Turn.IA_Turn
 VRPawn_C=VRPawn_C.TransformCommon.Transform,VRPawn_C.Physics.ConstraintsGroup,VRPawn_C.Collision.Collision,ArrowComponent.TransformCommon.Transform,SkeletalMeshComponent.TransformCommon.Transform,CameraComponent.TransformCommon.Transform
 SkeletalMeshComponent=VRPawn_C.TransformCommon.Transform,VRPawn_C.Physics.ConstraintsGroup,VRPawn_C.Collision.Collision,ArrowComponent.TransformCommon.Transform,SkeletalMeshComponent.TransformCommon.Transform,CameraComponent.TransformCommon.Transform
 EdGraphNode_Comment=VRPawn_C.TransformCommon.Transform
@@ -1711,6 +1758,9 @@ B_MannequinsXR_C=VRPawn_C.TransformCommon.Transform,VRPawn_C.Physics.Constraints
 SceneComponent=VRPawn_C.TransformCommon.Transform,VRPawn_C.Physics.ConstraintsGroup,VRPawn_C.Collision.Collision,ArrowComponent.TransformCommon.Transform,SkeletalMeshComponent.TransformCommon.Transform,CameraComponent.TransformCommon.Transform
 CapsuleComponent=VRPawn_C.TransformCommon.Transform,VRPawn_C.Physics.ConstraintsGroup,VRPawn_C.Collision.Collision,ArrowComponent.TransformCommon.Transform,SkeletalMeshComponent.TransformCommon.Transform,CameraComponent.TransformCommon.Transform
 K2Node_EnhancedInputAction=VRPawn_C.TransformCommon.Transform,VRPawn_C.Physics.ConstraintsGroup,VRPawn_C.Collision.Collision,ArrowComponent.TransformCommon.Transform,SkeletalMeshComponent.TransformCommon.Transform,CameraComponent.TransformCommon.Transform
+K2Node_VariableSet=VRPawn_C.TransformCommon.Transform,VRPawn_C.Physics.ConstraintsGroup,VRPawn_C.Collision.Collision,ArrowComponent.TransformCommon.Transform,SkeletalMeshComponent.TransformCommon.Transform,CameraComponent.TransformCommon.Transform
+PropertyWrapper=VRPawn_C.TransformCommon.Transform,VRPawn_C.Physics.ConstraintsGroup,VRPawn_C.Collision.Collision,ArrowComponent.TransformCommon.Transform,SkeletalMeshComponent.TransformCommon.Transform,CameraComponent.TransformCommon.Transform
+PhysicsHandleComponent=VRPawn_C.TransformCommon.Transform,VRPawn_C.Physics.ConstraintsGroup,VRPawn_C.Collision.Collision,ArrowComponent.TransformCommon.Transform,SkeletalMeshComponent.TransformCommon.Transform,CameraComponent.TransformCommon.Transform
 
 [AssetEditorSubsystemRecents]
 MRUItem0=/Game/VRTemplate/Input/Actions/NewActions/IA_Turn
@@ -1761,7 +1811,7 @@ VerticalBox="\"Object.Layout.Slot.Object.Layout.Layout|Border Slot.Padding\" "
 PanelWidget=
 Widget=
 Visual=
-InputMappingContext="\"Object.Mappings.Mappings.Mappings[25]\" \"Object.Mappings.Mappings.Mappings[26]\" "
+InputMappingContext="\"Object.Mappings.Mappings.Mappings[25]\" \"Object.Mappings.Mappings.Mappings[26]\" \"Object.Mappings.Mappings.Mappings[27]\" "
 VRPawn_C=
 Character=
 Pawn=
@@ -1780,6 +1830,7 @@ K2Node_VariableSet.Variable=False
 WidgetBlueprint.ClassOptions=True
 Blueprint.ClassOptions=True
 CameraComponent.ComponentTick=True
+WidgetInteractionComponent.Debugging=True
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
