--- a/LatenzProjekt/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/LatenzProjekt/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -1446,7 +1446,7 @@ ContentBrowserTab1.VerticalSplitter.SlotSize1=0.640953541
 ContentBrowserTab1.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserTab1.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserTab1.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserTab1.SelectedPaths=/Game/VRTemplate/Blueprints
+ContentBrowserTab1.SelectedPaths=/Game/VRTemplate/Levels
 ContentBrowserTab1.PluginFilters=
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
@@ -2645,7 +2645,7 @@ K2Node_GetInputActionValue=VRPawn_C.TransformCommon.Transform,VRPawn_C.Physics.C
 StaticMeshComponent=StaticMeshComponent.TransformCommon.Transform
 B_MannequinsXR_C=VRPawn_C.TransformCommon.Transform,VRPawn_C.Physics.ConstraintsGroup,VRPawn_C.Collision.Collision,ArrowComponent.TransformCommon.Transform,SkeletalMeshComponent.TransformCommon.Transform,B_MannequinsXR_C.TransformCommon.Transform
 SceneComponent=
-CapsuleComponent=
+CapsuleComponent=VRPawn_C.TransformCommon.Transform,VRPawn_C.Physics.ConstraintsGroup,VRPawn_C.Collision.Collision,ArrowComponent.TransformCommon.Transform,SkeletalMeshComponent.TransformCommon.Transform,CameraComponent.TransformCommon.Transform,GameMapsSettings.DefaultModes.SelectedGameModeDetails,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_Android,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_IOS,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_Linux,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_Mac,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_Windows,InputSettings.Platforms.InputPlatformSettings_Android,InputSettings.Platforms.InputPlatformSettings_IOS,InputSettings.Platforms.InputPlatformSettings_Linux,InputSettings.Platforms.InputPlatformSettings_Mac
 K2Node_EnhancedInputAction=VRPawn_C.TransformCommon.Transform,VRPawn_C.Physics.ConstraintsGroup,VRPawn_C.Collision.Collision,ArrowComponent.TransformCommon.Transform,SkeletalMeshComponent.TransformCommon.Transform,CameraComponent.TransformCommon.Transform
 K2Node_VariableSet=VRPawn_C.TransformCommon.Transform,VRPawn_C.Physics.ConstraintsGroup,VRPawn_C.Collision.Collision,ArrowComponent.TransformCommon.Transform,SkeletalMeshComponent.TransformCommon.Transform,CameraComponent.TransformCommon.Transform
 PropertyWrapper=VRPawn_C.TransformCommon.Transform,VRPawn_C.Physics.ConstraintsGroup,VRPawn_C.Collision.Collision,ArrowComponent.TransformCommon.Transform,SkeletalMeshComponent.TransformCommon.Transform,CameraComponent.TransformCommon.Transform
