--- a/LatenzProjekt/Saved/Config/WindowsEditor/Engine.ini
+++ b/LatenzProjekt/Saved/Config/WindowsEditor/Engine.ini
@@ -75,11 +75,8 @@ JavaPath=(Path="")
 [/Script/UnrealEd.UnrealEdEngine]
 TemplateMapInfos=(ThumbnailTexture=None,Thumbnail="/Engine/Maps/Templates/Thumbnails/OpenWorld.OpenWorld",Map="/Engine/Maps/Templates/OpenWorld",DisplayName="Open World",Category="OpenWorld")
 TemplateMapInfos=(ThumbnailTexture=None,Thumbnail="/Engine/Maps/Templates/Thumbnails/Basic.Basic",Map="/Engine/Maps/Templates/Template_Default",DisplayName="Basic",Category="")
+None=======
 
-<<<<<<< Updated upstream
-<<<<<<< Updated upstream
-<<<<<<< Updated upstream
-=======
 [WindowsApplication.Accessibility]
 StickyKeysHotkey=False
 ToggleKeysHotkey=False
@@ -87,9 +84,7 @@ FilterKeysHotkey=False
 StickyKeysConfirmation=False
 ToggleKeysConfirmation=False
 FilterKeysConfirmation=False
+None=======
+None=======
+None=======
 
->>>>>>> Stashed changes
-=======
->>>>>>> Stashed changes
-=======
->>>>>>> Stashed changes
