forgot to save lol

--- a/LatenzProjekt/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/LatenzProjekt/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -413,7 +413,7 @@ K2Node_VariableSet.Variable=True
 K2Node_VariableSet.DefaultValueCategory=True
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 DebuggerAttached=False
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
@@ -444,7 +444,7 @@ ContentBrowserTab1.VerticalSplitter.SlotSize1=0.75
 ContentBrowserTab1.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserTab1.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserTab1.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserTab1.SelectedPaths=/Game/VRTemplate/Maps/_GENERATED/Istrea
+ContentBrowserTab1.SelectedPaths=/Game
 ContentBrowserTab1.PluginFilters=
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
@@ -1611,6 +1611,8 @@ Voice.TimeStamp=2023.12.09-20.35.59
 Voice.LastCompileMethod=Unknown
 MovieSceneCapture.TimeStamp=2023.12.09-20.35.56
 MovieSceneCapture.LastCompileMethod=Unknown
+HierarchicalLODUtilities.TimeStamp=2023.12.09-20.35.55
+HierarchicalLODUtilities.LastCompileMethod=Unknown
 
 [Python]
 LastDirectory=
