--- a/LatenzProjekt/Config/DefaultEngine.ini
+++ b/LatenzProjekt/Config/DefaultEngine.ini
@@ -367,3 +367,7 @@ ManualIPAddress=
 [/Script/UnrealEd.CookerSettings]
 bCookOnTheFlyForLaunchOn=False
 
+[Debug]
+bDrawDebugLines=True
+bDebugLinesInShipping=True
+
