changed it so that it works in app but not in editor
....

--- a/LatenzProjekt/Saved/Config/WindowsEditor/Game.ini
+++ b/LatenzProjekt/Saved/Config/WindowsEditor/Game.ini
@@ -2,5 +2,5 @@
 bAddPacks=False
 
 [/Script/DeveloperToolSettings.PlatformsMenuSettings]
-StagingDirectory=(Path="C:/Users/leene/Documents/Projects/UE5 Projects/Builds")
+StagingDirectory=(Path="C:/Users/leene/Documents/Projects/UE5 Projects/Builds/Android_ASTC")
 
